[package]
name = "seqproc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "seqproc"
path = "src/lib.rs"

[[bin]]
name = "seqproc"
path = "src/bin/bin.rs"

[dependencies]
chumsky="0.9.2"
ariadne = "0.1.5"
clap = { version = "4.2.1", features = ["derive"] }
antisequence = { git = "https://github.com/noahcape/ANTISEQUENCE/", branch='my_dev' }
anyhow = "1.0"
tempfile = "3.5.0"