[package]
name = "seqproc"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/COMBINE-lab/seqproc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "seqproc"
path = "src/lib.rs"

[[bin]]
name = "seqproc"
path = "src/bin/bin.rs"

[dependencies]
chumsky = "0.9.3"
ariadne = "0.3.0"
clap = { version = "4.4.8", features = ["derive"] }
antisequence = { git = "https://github.com/noahcape/ANTISEQUENCE/", branch = 'my_dev' }
