[package]
name = "seqproc"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/COMBINE-lab/seqproc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "seqproc"
path = "src/lib.rs"

[[bin]]
name = "seqproc"
path = "src/bin/bin.rs"

[dependencies]
antisequence = { git = "https://github.com/Daniel-Liu-c0deb0t/ANTISEQUENCE.git", branch = 'dev' }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
ariadne = "0.3.0"
chumsky = "0.9.3"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.5.0"
nix = { version = "0.26.2", features = ["fs"] }

[dev-dependencies]
assert_cmd = "2.0.12"
similar-asserts = "1.5.0"
tempdir = "0.3.7"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
semicolon_if_nothing_returned = "warn"
